[metadata]
name = nfl_data_py-cooperdff
version = 1.0.0
author = cooperdff
author_email = cooper.dff11@gmail.com
description = Package for working with NFL data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cooperdff/nfl_data_py
project_urls =
    Bug Tracker = https://github.com/cooperdff/nfl_data_py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = nfl_data_py
packages = find:
python_requires = >=3.6

[options.packages.find]
where = nfl_data_py